# beamup

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SKILL.md
.github/workflows/: release.yml
crates/beamup-agent/: Cargo.toml
crates/beamup-agent/src/: main.rs  syncer.rs  transport.rs  watcher.rs
crates/beamup-cli/: Cargo.toml  build.rs
crates/beamup-cli/src/: beam.rs  config.rs  main.rs  progress.rs  syncer.rs  transfer.rs  transport.rs  watcher.rs
crates/beamup-cli/src/commands/: down.rs  exec.rs  mod.rs  start.rs  status.rs  sync.rs
crates/beamup-protocol/: Cargo.toml
crates/beamup-protocol/src/: codec.rs  compress.rs  hash.rs  ignore.rs  lib.rs  messages.rs
scripts/: build-agent.sh  build.sh
