[workspace]
members = ["crates/beamup-protocol", "crates/beamup-cli", "crates/beamup-agent"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
tar = "0.4"
flate2 = "1"
