[package]
name = "beamup-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
beamup-protocol = { path = "../beamup-protocol" }
tokio = { workspace = true, features = ["rt", "io-util", "sync", "signal", "macros", "time"] }
tokio-util = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
futures-util = { version = "0.3", features = ["sink"] }

[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.11"
